🔥 remove wallet endpoints
